generator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMMENTVAR
    CONTINUE
    DELETE
    DMINUS
    DOT
    DPLUS
    ESC
    LSQUARE
    RSQUARE

Grammar

Rule 0     S' -> program
Rule 1     program -> include using_namespace_std block
Rule 2     program -> using_namespace_std block
Rule 3     block -> block_part block_part main_func
Rule 4     block -> main_func
Rule 5     block_part -> variable_def
Rule 6     block_part -> class
Rule 7     block_part -> function
Rule 8     block_part -> block_part block_part
Rule 9     using_namespace_std -> USING NAMESPACE STD SEMICOLON
Rule 10    main_func -> VOID MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
Rule 11    main_func -> INT MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
Rule 12    main_func -> INT MAIN LPARENTH RPARENTH LBRACE RBRACE SEMICOLON
Rule 13    parameters -> type VARNAME
Rule 14    parameters -> type VARNAME COMMA parameters
Rule 15    if_statement -> IF LPARENTH condition RPARENTH LBRACE func_block RBRACE else_block
Rule 16    if_statement -> IF LPARENTH condition RPARENTH LBRACE func_block RBRACE
Rule 17    else_block -> ELSE LBRACE func_block RBRACE
Rule 18    condition -> var_value comparator var_value
Rule 19    condition -> VARNAME comparator VARNAME
Rule 20    condition -> VARNAME comparator var_value
Rule 21    condition -> var_value comparator VARNAME
Rule 22    while_statement -> WHILE LPARENTH condition RPARENTH LBRACE func_block RBRACE
Rule 23    for_statement -> FOR LPARENTH INT VARNAME EQUAL INTVAR SEMICOLON VARNAME comparator INTVAR SEMICOLON VARNAME math_operator EQUAL INTVAR RPARENTH LBRACE func_block RBRACE
Rule 24    for_statement -> FOR LPARENTH SEMICOLON SEMICOLON RPARENTH LBRACE func_block RBRACE
Rule 25    class -> CLASS VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
Rule 26    class -> CLASS VARNAME LBRACE class_functions RBRACE SEMICOLON
Rule 27    class -> CLASS VARNAME LBRACE class_variable RBRACE SEMICOLON
Rule 28    return_statement -> RETURN var_value SEMICOLON
Rule 29    return_statement -> RETURN SEMICOLON
Rule 30    assign_var -> VARNAME EQUAL var_value SEMICOLON
Rule 31    assign_var -> VARNAME EQUAL calculation SEMICOLON
Rule 32    variable_def -> declare_var
Rule 33    variable_def -> declare_assign_var
Rule 34    declare_assign_var -> type VARNAME EQUAL var_value SEMICOLON
Rule 35    declare_assign_var -> type VARNAME EQUAL calculation SEMICOLON
Rule 36    declare_var -> type VARNAME SEMICOLON
Rule 37    class_variable -> access_modifier COLON variable_def
Rule 38    class_variable -> variable_def
Rule 39    class_variable -> assign_var
Rule 40    class_variable -> class_variable class_variable
Rule 41    class_functions -> access_modifier COLON function
Rule 42    class_functions -> function
Rule 43    class_functions -> class_functions class_functions
Rule 44    function -> return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
Rule 45    function -> return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
Rule 46    access_modifier -> PUBLIC
Rule 47    access_modifier -> PRIVATE
Rule 48    access_modifier -> PROTECTED
Rule 49    func_block -> statement
Rule 50    func_block -> statement return_statement
Rule 51    func_block -> return_statement
Rule 52    statement -> variable_def
Rule 53    statement -> if_statement
Rule 54    statement -> while_statement
Rule 55    statement -> for_statement
Rule 56    statement -> print_out
Rule 57    statement -> cin_in
Rule 58    statement -> VARNAME EQUAL calculation SEMICOLON
Rule 59    statement -> assign_var
Rule 60    statement -> statement statement
Rule 61    print_out -> COUT cout_expression_string SEMICOLON
Rule 62    cout_expression_string -> cout_expression cout_expression_string
Rule 63    cout_expression_string -> cout_expression
Rule 64    cout_expression -> LBIT printable
Rule 65    printable -> var_value
Rule 66    printable -> VARNAME
Rule 67    printable -> ENDL
Rule 68    printable -> STRINGVAR
Rule 69    calculation -> number math_operator number
Rule 70    include -> HASH INCLUDE LTHAN VARNAME GTHAN
Rule 71    type -> INT
Rule 72    type -> FLOAT
Rule 73    type -> CHAR
Rule 74    type -> STRING
Rule 75    type -> BOOL
Rule 76    cin_in -> CIN RBIT VARNAME SEMICOLON
Rule 77    number -> INTVAR
Rule 78    number -> FLOATVAR
Rule 79    return_type -> type
Rule 80    return_type -> VOID
Rule 81    math_operator -> PLUS
Rule 82    math_operator -> MINUS
Rule 83    math_operator -> MUL
Rule 84    math_operator -> DIV
Rule 85    math_operator -> MOD
Rule 86    comparator -> GTHAN
Rule 87    comparator -> LTHAN
Rule 88    comparator -> LESS_EQUAL
Rule 89    comparator -> DEQUAL
Rule 90    comparator -> GREATER_EQUAL
Rule 91    comparator -> NOT_EQUAL
Rule 92    var_value -> INTVAR
Rule 93    var_value -> FLOATVAR
Rule 94    var_value -> STRINGVAR
Rule 95    var_value -> bool_value
Rule 96    bool_value -> TRUE
Rule 97    bool_value -> FALSE

Terminals, with rules where they appear

BOOL                 : 75
BREAK                : 
CHAR                 : 73
CIN                  : 76
CLASS                : 25 26 27
COLON                : 37 41
COMMA                : 14
COMMENTVAR           : 
CONTINUE             : 
COUT                 : 61
DELETE               : 
DEQUAL               : 89
DIV                  : 84
DMINUS               : 
DOT                  : 
DPLUS                : 
ELSE                 : 17
ENDL                 : 67
EQUAL                : 23 23 30 31 34 35 58
ESC                  : 
FALSE                : 97
FLOAT                : 72
FLOATVAR             : 78 93
FOR                  : 23 24
GREATER_EQUAL        : 90
GTHAN                : 70 86
HASH                 : 70
IF                   : 15 16
INCLUDE              : 70
INT                  : 11 12 23 71
INTVAR               : 23 23 23 77 92
LBIT                 : 64
LBRACE               : 10 11 12 15 16 17 22 23 24 25 26 27 44 45
LESS_EQUAL           : 88
LPARENTH             : 10 11 12 15 16 22 23 24 44 45
LSQUARE              : 
LTHAN                : 70 87
MAIN                 : 10 11 12
MINUS                : 82
MOD                  : 85
MUL                  : 83
NAMESPACE            : 9
NOT_EQUAL            : 91
PLUS                 : 81
PRIVATE              : 47
PROTECTED            : 48
PUBLIC               : 46
RBIT                 : 76
RBRACE               : 10 11 12 15 16 17 22 23 24 25 26 27 44 45
RETURN               : 28 29
RPARENTH             : 10 11 12 15 16 22 23 24 44 45
RSQUARE              : 
SEMICOLON            : 9 10 11 12 23 23 24 24 25 26 27 28 29 30 31 34 35 36 58 61 76
STD                  : 9
STRING               : 74
STRINGVAR            : 68 94
TRUE                 : 96
USING                : 9
VARNAME              : 13 14 19 19 20 21 23 23 23 25 26 27 30 31 34 35 36 44 45 58 66 70 76
VOID                 : 10 80
WHILE                : 22
error                : 

Nonterminals, with rules where they appear

access_modifier      : 37 41
assign_var           : 39 59
block                : 1 2
block_part           : 3 3 8 8
bool_value           : 95
calculation          : 31 35 58
cin_in               : 57
class                : 6
class_functions      : 25 26 43 43
class_variable       : 25 27 40 40
comparator           : 18 19 20 21 23
condition            : 15 16 22
cout_expression      : 62 63
cout_expression_string : 61 62
declare_assign_var   : 33
declare_var          : 32
else_block           : 15
for_statement        : 55
func_block           : 10 11 15 16 17 22 23 24 44 45
function             : 7 41 42
if_statement         : 53
include              : 1
main_func            : 3 4
math_operator        : 23 69
number               : 69 69
parameters           : 14 44
print_out            : 56
printable            : 64
program              : 0
return_statement     : 50 51
return_type          : 44 45
statement            : 49 50 60 60
type                 : 13 14 34 35 36 79
using_namespace_std  : 1 2
var_value            : 18 18 20 21 28 30 34 65
variable_def         : 5 37 38 52
while_statement      : 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . include using_namespace_std block
    (2) program -> . using_namespace_std block
    (70) include -> . HASH INCLUDE LTHAN VARNAME GTHAN
    (9) using_namespace_std -> . USING NAMESPACE STD SEMICOLON

    HASH            shift and go to state 4
    USING           shift and go to state 5

    program                        shift and go to state 1
    include                        shift and go to state 2
    using_namespace_std            shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> include . using_namespace_std block
    (9) using_namespace_std -> . USING NAMESPACE STD SEMICOLON

    USING           shift and go to state 5

    using_namespace_std            shift and go to state 6

state 3

    (2) program -> using_namespace_std . block
    (3) block -> . block_part block_part main_func
    (4) block -> . main_func
    (5) block_part -> . variable_def
    (6) block_part -> . class
    (7) block_part -> . function
    (8) block_part -> . block_part block_part
    (10) main_func -> . VOID MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (11) main_func -> . INT MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (12) main_func -> . INT MAIN LPARENTH RPARENTH LBRACE RBRACE SEMICOLON
    (32) variable_def -> . declare_var
    (33) variable_def -> . declare_assign_var
    (25) class -> . CLASS VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> . CLASS VARNAME LBRACE class_functions RBRACE SEMICOLON
    (27) class -> . CLASS VARNAME LBRACE class_variable RBRACE SEMICOLON
    (44) function -> . return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> . return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
    (36) declare_var -> . type VARNAME SEMICOLON
    (34) declare_assign_var -> . type VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> . type VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> . type
    (80) return_type -> . VOID
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

    VOID            shift and go to state 13
    INT             shift and go to state 14
    CLASS           shift and go to state 17
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    block                          shift and go to state 7
    block_part                     shift and go to state 8
    main_func                      shift and go to state 9
    variable_def                   shift and go to state 10
    class                          shift and go to state 11
    function                       shift and go to state 12
    declare_var                    shift and go to state 15
    declare_assign_var             shift and go to state 16
    return_type                    shift and go to state 18
    type                           shift and go to state 19

state 4

    (70) include -> HASH . INCLUDE LTHAN VARNAME GTHAN

    INCLUDE         shift and go to state 24


state 5

    (9) using_namespace_std -> USING . NAMESPACE STD SEMICOLON

    NAMESPACE       shift and go to state 25


state 6

    (1) program -> include using_namespace_std . block
    (3) block -> . block_part block_part main_func
    (4) block -> . main_func
    (5) block_part -> . variable_def
    (6) block_part -> . class
    (7) block_part -> . function
    (8) block_part -> . block_part block_part
    (10) main_func -> . VOID MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (11) main_func -> . INT MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (12) main_func -> . INT MAIN LPARENTH RPARENTH LBRACE RBRACE SEMICOLON
    (32) variable_def -> . declare_var
    (33) variable_def -> . declare_assign_var
    (25) class -> . CLASS VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> . CLASS VARNAME LBRACE class_functions RBRACE SEMICOLON
    (27) class -> . CLASS VARNAME LBRACE class_variable RBRACE SEMICOLON
    (44) function -> . return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> . return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
    (36) declare_var -> . type VARNAME SEMICOLON
    (34) declare_assign_var -> . type VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> . type VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> . type
    (80) return_type -> . VOID
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

    VOID            shift and go to state 13
    INT             shift and go to state 14
    CLASS           shift and go to state 17
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    block                          shift and go to state 26
    block_part                     shift and go to state 8
    main_func                      shift and go to state 9
    variable_def                   shift and go to state 10
    class                          shift and go to state 11
    function                       shift and go to state 12
    declare_var                    shift and go to state 15
    declare_assign_var             shift and go to state 16
    return_type                    shift and go to state 18
    type                           shift and go to state 19

state 7

    (2) program -> using_namespace_std block .

    $end            reduce using rule 2 (program -> using_namespace_std block .)


state 8

    (3) block -> block_part . block_part main_func
    (8) block_part -> block_part . block_part
    (5) block_part -> . variable_def
    (6) block_part -> . class
    (7) block_part -> . function
    (8) block_part -> . block_part block_part
    (32) variable_def -> . declare_var
    (33) variable_def -> . declare_assign_var
    (25) class -> . CLASS VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> . CLASS VARNAME LBRACE class_functions RBRACE SEMICOLON
    (27) class -> . CLASS VARNAME LBRACE class_variable RBRACE SEMICOLON
    (44) function -> . return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> . return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
    (36) declare_var -> . type VARNAME SEMICOLON
    (34) declare_assign_var -> . type VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> . type VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> . type
    (80) return_type -> . VOID
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

    CLASS           shift and go to state 17
    VOID            shift and go to state 28
    INT             shift and go to state 29
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    block_part                     shift and go to state 27
    variable_def                   shift and go to state 10
    class                          shift and go to state 11
    function                       shift and go to state 12
    declare_var                    shift and go to state 15
    declare_assign_var             shift and go to state 16
    return_type                    shift and go to state 18
    type                           shift and go to state 19

state 9

    (4) block -> main_func .

    $end            reduce using rule 4 (block -> main_func .)


state 10

    (5) block_part -> variable_def .

    CLASS           reduce using rule 5 (block_part -> variable_def .)
    VOID            reduce using rule 5 (block_part -> variable_def .)
    INT             reduce using rule 5 (block_part -> variable_def .)
    FLOAT           reduce using rule 5 (block_part -> variable_def .)
    CHAR            reduce using rule 5 (block_part -> variable_def .)
    STRING          reduce using rule 5 (block_part -> variable_def .)
    BOOL            reduce using rule 5 (block_part -> variable_def .)


state 11

    (6) block_part -> class .

    CLASS           reduce using rule 6 (block_part -> class .)
    VOID            reduce using rule 6 (block_part -> class .)
    INT             reduce using rule 6 (block_part -> class .)
    FLOAT           reduce using rule 6 (block_part -> class .)
    CHAR            reduce using rule 6 (block_part -> class .)
    STRING          reduce using rule 6 (block_part -> class .)
    BOOL            reduce using rule 6 (block_part -> class .)


state 12

    (7) block_part -> function .

    CLASS           reduce using rule 7 (block_part -> function .)
    VOID            reduce using rule 7 (block_part -> function .)
    INT             reduce using rule 7 (block_part -> function .)
    FLOAT           reduce using rule 7 (block_part -> function .)
    CHAR            reduce using rule 7 (block_part -> function .)
    STRING          reduce using rule 7 (block_part -> function .)
    BOOL            reduce using rule 7 (block_part -> function .)


state 13

    (10) main_func -> VOID . MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (80) return_type -> VOID .

    MAIN            shift and go to state 30
    VARNAME         reduce using rule 80 (return_type -> VOID .)


state 14

    (11) main_func -> INT . MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (12) main_func -> INT . MAIN LPARENTH RPARENTH LBRACE RBRACE SEMICOLON
    (71) type -> INT .

    MAIN            shift and go to state 31
    VARNAME         reduce using rule 71 (type -> INT .)


state 15

    (32) variable_def -> declare_var .

    CLASS           reduce using rule 32 (variable_def -> declare_var .)
    VOID            reduce using rule 32 (variable_def -> declare_var .)
    INT             reduce using rule 32 (variable_def -> declare_var .)
    FLOAT           reduce using rule 32 (variable_def -> declare_var .)
    CHAR            reduce using rule 32 (variable_def -> declare_var .)
    STRING          reduce using rule 32 (variable_def -> declare_var .)
    BOOL            reduce using rule 32 (variable_def -> declare_var .)
    RBRACE          reduce using rule 32 (variable_def -> declare_var .)
    PUBLIC          reduce using rule 32 (variable_def -> declare_var .)
    PRIVATE         reduce using rule 32 (variable_def -> declare_var .)
    PROTECTED       reduce using rule 32 (variable_def -> declare_var .)
    VARNAME         reduce using rule 32 (variable_def -> declare_var .)
    RETURN          reduce using rule 32 (variable_def -> declare_var .)
    IF              reduce using rule 32 (variable_def -> declare_var .)
    WHILE           reduce using rule 32 (variable_def -> declare_var .)
    FOR             reduce using rule 32 (variable_def -> declare_var .)
    COUT            reduce using rule 32 (variable_def -> declare_var .)
    CIN             reduce using rule 32 (variable_def -> declare_var .)


state 16

    (33) variable_def -> declare_assign_var .

    CLASS           reduce using rule 33 (variable_def -> declare_assign_var .)
    VOID            reduce using rule 33 (variable_def -> declare_assign_var .)
    INT             reduce using rule 33 (variable_def -> declare_assign_var .)
    FLOAT           reduce using rule 33 (variable_def -> declare_assign_var .)
    CHAR            reduce using rule 33 (variable_def -> declare_assign_var .)
    STRING          reduce using rule 33 (variable_def -> declare_assign_var .)
    BOOL            reduce using rule 33 (variable_def -> declare_assign_var .)
    RBRACE          reduce using rule 33 (variable_def -> declare_assign_var .)
    PUBLIC          reduce using rule 33 (variable_def -> declare_assign_var .)
    PRIVATE         reduce using rule 33 (variable_def -> declare_assign_var .)
    PROTECTED       reduce using rule 33 (variable_def -> declare_assign_var .)
    VARNAME         reduce using rule 33 (variable_def -> declare_assign_var .)
    RETURN          reduce using rule 33 (variable_def -> declare_assign_var .)
    IF              reduce using rule 33 (variable_def -> declare_assign_var .)
    WHILE           reduce using rule 33 (variable_def -> declare_assign_var .)
    FOR             reduce using rule 33 (variable_def -> declare_assign_var .)
    COUT            reduce using rule 33 (variable_def -> declare_assign_var .)
    CIN             reduce using rule 33 (variable_def -> declare_assign_var .)


state 17

    (25) class -> CLASS . VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> CLASS . VARNAME LBRACE class_functions RBRACE SEMICOLON
    (27) class -> CLASS . VARNAME LBRACE class_variable RBRACE SEMICOLON

    VARNAME         shift and go to state 32


state 18

    (44) function -> return_type . VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> return_type . VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE

    VARNAME         shift and go to state 33


state 19

    (36) declare_var -> type . VARNAME SEMICOLON
    (34) declare_assign_var -> type . VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> type . VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> type .

  ! shift/reduce conflict for VARNAME resolved as shift
    VARNAME         shift and go to state 34

  ! VARNAME         [ reduce using rule 79 (return_type -> type .) ]


state 20

    (72) type -> FLOAT .

    VARNAME         reduce using rule 72 (type -> FLOAT .)


state 21

    (73) type -> CHAR .

    VARNAME         reduce using rule 73 (type -> CHAR .)


state 22

    (74) type -> STRING .

    VARNAME         reduce using rule 74 (type -> STRING .)


state 23

    (75) type -> BOOL .

    VARNAME         reduce using rule 75 (type -> BOOL .)


state 24

    (70) include -> HASH INCLUDE . LTHAN VARNAME GTHAN

    LTHAN           shift and go to state 35


state 25

    (9) using_namespace_std -> USING NAMESPACE . STD SEMICOLON

    STD             shift and go to state 36


state 26

    (1) program -> include using_namespace_std block .

    $end            reduce using rule 1 (program -> include using_namespace_std block .)


state 27

    (3) block -> block_part block_part . main_func
    (8) block_part -> block_part block_part .
    (8) block_part -> block_part . block_part
    (10) main_func -> . VOID MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (11) main_func -> . INT MAIN LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (12) main_func -> . INT MAIN LPARENTH RPARENTH LBRACE RBRACE SEMICOLON
    (5) block_part -> . variable_def
    (6) block_part -> . class
    (7) block_part -> . function
    (8) block_part -> . block_part block_part
    (32) variable_def -> . declare_var
    (33) variable_def -> . declare_assign_var
    (25) class -> . CLASS VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> . CLASS VARNAME LBRACE class_functions RBRACE SEMICOLON
    (27) class -> . CLASS VARNAME LBRACE class_variable RBRACE SEMICOLON
    (44) function -> . return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> . return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
    (36) declare_var -> . type VARNAME SEMICOLON
    (34) declare_assign_var -> . type VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> . type VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> . type
    (80) return_type -> . VOID
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    VOID            shift and go to state 13
    INT             shift and go to state 14
    CLASS           shift and go to state 17
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

  ! CLASS           [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! VOID            [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! INT             [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! FLOAT           [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! CHAR            [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! STRING          [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! BOOL            [ reduce using rule 8 (block_part -> block_part block_part .) ]

    block_part                     shift and go to state 37
    main_func                      shift and go to state 38
    variable_def                   shift and go to state 10
    class                          shift and go to state 11
    function                       shift and go to state 12
    declare_var                    shift and go to state 15
    declare_assign_var             shift and go to state 16
    return_type                    shift and go to state 18
    type                           shift and go to state 19

state 28

    (80) return_type -> VOID .

    VARNAME         reduce using rule 80 (return_type -> VOID .)


state 29

    (71) type -> INT .

    VARNAME         reduce using rule 71 (type -> INT .)


state 30

    (10) main_func -> VOID MAIN . LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON

    LPARENTH        shift and go to state 39


state 31

    (11) main_func -> INT MAIN . LPARENTH RPARENTH LBRACE func_block RBRACE SEMICOLON
    (12) main_func -> INT MAIN . LPARENTH RPARENTH LBRACE RBRACE SEMICOLON

    LPARENTH        shift and go to state 40


state 32

    (25) class -> CLASS VARNAME . LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> CLASS VARNAME . LBRACE class_functions RBRACE SEMICOLON
    (27) class -> CLASS VARNAME . LBRACE class_variable RBRACE SEMICOLON

    LBRACE          shift and go to state 41


state 33

    (44) function -> return_type VARNAME . LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> return_type VARNAME . LPARENTH RPARENTH LBRACE func_block RBRACE

    LPARENTH        shift and go to state 42


state 34

    (36) declare_var -> type VARNAME . SEMICOLON
    (34) declare_assign_var -> type VARNAME . EQUAL var_value SEMICOLON
    (35) declare_assign_var -> type VARNAME . EQUAL calculation SEMICOLON

    SEMICOLON       shift and go to state 43
    EQUAL           shift and go to state 44


state 35

    (70) include -> HASH INCLUDE LTHAN . VARNAME GTHAN

    VARNAME         shift and go to state 45


state 36

    (9) using_namespace_std -> USING NAMESPACE STD . SEMICOLON

    SEMICOLON       shift and go to state 46


state 37

    (8) block_part -> block_part block_part .
    (8) block_part -> block_part . block_part
    (5) block_part -> . variable_def
    (6) block_part -> . class
    (7) block_part -> . function
    (8) block_part -> . block_part block_part
    (32) variable_def -> . declare_var
    (33) variable_def -> . declare_assign_var
    (25) class -> . CLASS VARNAME LBRACE class_variable class_functions RBRACE SEMICOLON
    (26) class -> . CLASS VARNAME LBRACE class_functions RBRACE SEMICOLON
    (27) class -> . CLASS VARNAME LBRACE class_variable RBRACE SEMICOLON
    (44) function -> . return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> . return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
    (36) declare_var -> . type VARNAME SEMICOLON
    (34) declare_assign_var -> . type VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> . type VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> . type
    (80) return_type -> . VOID
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    CLASS           shift and go to state 17
    VOID            shift and go to state 28
    INT             shift and go to state 29
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

  ! VOID            [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! INT             [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! CLASS           [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! FLOAT           [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! CHAR            [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! STRING          [ reduce using rule 8 (block_part -> block_part block_part .) ]
  ! BOOL            [ reduce using rule 8 (block_part -> block_part block_part .) ]

    block_part                     shift and go to state 37
    variable_def                   shift and go to state 10
    class                          shift and go to state 11
    function                       shift and go to state 12
    declare_var                    shift and go to state 15
    declare_assign_var             shift and go to state 16
    return_type                    shift and go to state 18
    type                           shift and go to state 19

state 38

    (3) block -> block_part block_part main_func .

    $end            reduce using rule 3 (block -> block_part block_part main_func .)


state 39

    (10) main_func -> VOID MAIN LPARENTH . RPARENTH LBRACE func_block RBRACE SEMICOLON

    RPARENTH        shift and go to state 47


state 40

    (11) main_func -> INT MAIN LPARENTH . RPARENTH LBRACE func_block RBRACE SEMICOLON
    (12) main_func -> INT MAIN LPARENTH . RPARENTH LBRACE RBRACE SEMICOLON

    RPARENTH        shift and go to state 48


state 41

    (25) class -> CLASS VARNAME LBRACE . class_variable class_functions RBRACE SEMICOLON
    (26) class -> CLASS VARNAME LBRACE . class_functions RBRACE SEMICOLON
    (27) class -> CLASS VARNAME LBRACE . class_variable RBRACE SEMICOLON
    (37) class_variable -> . access_modifier COLON variable_def
    (38) class_variable -> . variable_def
    (39) class_variable -> . assign_var
    (40) class_variable -> . class_variable class_variable
    (41) class_functions -> . access_modifier COLON function
    (42) class_functions -> . function
    (43) class_functions -> . class_functions class_functions
    (46) access_modifier -> . PUBLIC
    (47) access_modifier -> . PRIVATE
    (48) access_modifier -> . PROTECTED
    (32) variable_def -> . declare_var
    (33) variable_def -> . declare_assign_var
    (30) assign_var -> . VARNAME EQUAL var_value SEMICOLON
    (31) assign_var -> . VARNAME EQUAL calculation SEMICOLON
    (44) function -> . return_type VARNAME LPARENTH parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> . return_type VARNAME LPARENTH RPARENTH LBRACE func_block RBRACE
    (36) declare_var -> . type VARNAME SEMICOLON
    (34) declare_assign_var -> . type VARNAME EQUAL var_value SEMICOLON
    (35) declare_assign_var -> . type VARNAME EQUAL calculation SEMICOLON
    (79) return_type -> . type
    (80) return_type -> . VOID
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

    PUBLIC          shift and go to state 56
    PRIVATE         shift and go to state 57
    PROTECTED       shift and go to state 58
    VARNAME         shift and go to state 49
    VOID            shift and go to state 28
    INT             shift and go to state 29
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    class_variable                 shift and go to state 50
    class_functions                shift and go to state 51
    access_modifier                shift and go to state 52
    variable_def                   shift and go to state 53
    assign_var                     shift and go to state 54
    function                       shift and go to state 55
    declare_var                    shift and go to state 15
    declare_assign_var             shift and go to state 16
    return_type                    shift and go to state 18
    type                           shift and go to state 19

state 42

    (44) function -> return_type VARNAME LPARENTH . parameters RPARENTH LBRACE func_block RBRACE
    (45) function -> return_type VARNAME LPARENTH . RPARENTH LBRACE func_block RBRACE
    (13) parameters -> . type VARNAME
    (14) parameters -> . type VARNAME COMMA parameters
    (71) type -> . INT
    (72) type -> . FLOAT
    (73) type -> . CHAR
    (74) type -> . STRING
    (75) type -> . BOOL

    RPARENTH        shift and go to state 60
    INT             shift and go to state 29
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    parameters                     shift and go to state 59
    type                           shift and go to state 61

state 43

    (36) declare_var -> type VARNAME SEMICOLON .
